css: Avoid using subpixel line-height
It messes up alignment as different browsers use different math and
the inputs are then either misaligned in Chrome or in Firefox.

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -777,7 +777,7 @@ input[type="date"].form-control,
 input[type="time"].form-control,
 input[type="datetime-local"].form-control,
 input[type="month"].form-control {
-  line-height: initial;
+  line-height: 1.5;
 }
 
 .highlight-number {
@@ -1803,5 +1803,5 @@ a.language:hover {
   background-color: white;
 }
 .input-group > .form-control {
-  height: 36.66px;
+  height: 38px;
 }
